--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,11 @@ importlib-metadata==1.6.1
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 more-itertools==8.3.0
+oauth2client==3.0.0
 oauthlib==3.1.0
 packaging==20.4
 phonenumbers==8.12.5
+pkg-resources==0.0.0
 pluggy==0.13.1
 protobuf==3.12.2
 py==1.8.1
