--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,12 @@ importlib-metadata==1.6.1
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 more-itertools==8.3.0
+mypy==0.780
+mypy-extensions==0.4.3
 oauth2client==3.0.0
 oauthlib==3.1.0
 packaging==20.4
 phonenumbers==8.12.5
-pkg-resources==0.0.0
 pluggy==0.13.1
 protobuf==3.12.2
 py==1.8.1
@@ -34,6 +35,8 @@ requests-oauthlib==1.3.0
 rsa==4.0
 six==1.15.0
 twilio==6.41.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
 uritemplate==3.0.1
 urllib3==1.25.9
 wcwidth==0.2.3
